# vim: set noexpandtab:

2012-10-30 Anyes
	* Added const to hasJetInBadFCAL
	* Added feature to TGuiUtils
	
2012-10-25 Steve
	* Added protection against file open errors in ChainHelper
	* Tagging SusyNtuple-00-00-34

2012-10-24 Steve
	* Added a fix for sumw of 147772 Sherpa Ztautau in getEventWeightFixed
	* Tagging SusyNtuple-00-00-33

2012-10-22 Steve
	* Updated period enum and function in SusyDefs
	* Cleaned up some white space and removed obsolete code
	* Added optional run number and isMC check to hasJetInBadFCAL
	* Added FCAL veto to Susy3LCutFlow

2012-10-20 Steve
	* Fixed formatting and variable naming conventions

2012-10-19 Matt
	* Added useMCTrigger() to dilepton trigger package to allow toggling on and off checking mc trigger chains.

2012-10-18 Anyes
	* Fix BadFCAL - forgot the fabs for eta and upper phi cut effectively not applied.

2012-10-18 Matt
	* Updated SusyDefs.h to contain enum for electron and muon trigger systematics
	* Updated DilTriggerLogic to handle the new systematics

2012-10-18 Anyes
	* Add feature to check for duplicate events in data

2012-10-14 Steve
	* Tagging SusyNtuple-00-00-32

2012-10-12 Anyes	
	* Remove the const in the typedef LeptonVector etc... 
	* Fix TGuiUtils - draw stack - y-axis range behaviour
	* Update MCTruthClassifier file to 00-00-23 tag. 
	  Should have no effect beside the enum matching what we have in SusyNt.

2012-10-10 Anyes
	* Added copy & = constructor to all classes beside the Event class.

2012-10-07 Steve
	* Added getEventWeightFixed, for fixing the sumw in Sherpa_Zmumu inclusive
		* In the next ntuple tag we can go back to using the standard function

2012-10-06 Steve
	* Added option to TrilTrigLogic to only apply acceptance cuts 
	  (pt thresholds) and not require matching
	* Added function to check if sample is sherpa (by mc_channel_number)

2012-10-05 Steve
	* Added isSherpaSample(mcID)
	* Put evtFlag back into SusyEvent to recover some backwards compatibility
		* I _think_ this will work